samples/_failures_safe/1761404071_a0228d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5330d95.c: In function ‘print_statistics’:
./samples/SAFE/__tmp_e5330d95.c:136:12: error: missing terminating " character
  136 |     printf("Time range: %
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_e5330d95.c:136:5: error: expected expression at end of input
  136 |     printf("Time range: %
      |     ^~~~~~
./samples/SAFE/__tmp_e5330d95.c:136:5: error: expected declaration or statement at end of input
